@@ -168,5 +168,6 @@ static int has_console(void)
 
 CAMLprim value caml_unix_terminate_process(value v_pid)
 {
-  return (Val_bool(TerminateProcess((HANDLE) Long_val(v_pid), 0)));
+  return (Val_bool(TerminateProcess((HANDLE) Long_val(v_pid),
+                                    ERROR_PROCESS_ABORTED)));
 }
